--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+# Information Flow and Decision-Making Simulation
+
 The page of original project: https://eecs281staff.github.io/p2-a-new-heap/
 
 How this modified version works:
